Implement new scheduler: simpler and scales better
The main difference is that we no longer try to discover recursive knots
as we go and duplicate recursive structures as we encounter them.
Instead, we only generate one top-level def for each graph scope, using
flags to branch on non-local conditions (this implements a form of
defunctionalization).

--- a/.gitignore
+++ b/.gitignore
@@ -22,13 +22,13 @@ haskellopt/target/
 site/target/
 
 
-haskellopt_gen/*.hi
-haskellopt_gen/*.o
-haskellopt_gen/*.opt
-haskellopt_gen/bench/*
-haskellopt_gen/bench-doc/*.hi
-haskellopt_gen/bench-doc/*.o
-haskellopt_gen/bench-doc/*.opt
+haskellopt_gen*/*.hi
+haskellopt_gen*/*.o
+haskellopt_gen*/*.opt
+haskellopt_gen*/bench/*
+haskellopt_gen*/bench-doc/*.hi
+haskellopt_gen*/bench-doc/*.o
+haskellopt_gen*/bench-doc/*.opt
 
 # ignore everything in there but files with a .hs extension -- this is to ignore executables compiled by me using GHC
 haskellopt/src/test/haskell/*
@@ -36,15 +36,10 @@ haskellopt/src/test/haskell/*
 haskellopt/src/test/haskell/_perso*
 
 # -- Graph IR v4: --
-
-haskellopt_gen2/*.hi
-haskellopt_gen2/*.o
-haskellopt_gen2/*.opt
-haskellopt_gen2/bench/*
-haskellopt_gen2/bench-doc/*.hi
-haskellopt_gen2/bench-doc/*.o
-haskellopt_gen2/bench-doc/*.opt
-
+!haskellopt_gen3/bench/*
+haskellopt_gen3/bench/*.hi
+haskellopt_gen3/bench/*.o
+haskellopt_gen3/bench/*.opt
 haskellopt/src/test/haskell2/*
 !haskellopt/src/test/haskell2/*.hs
 haskellopt/src/test/haskell2/_perso*
